// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph renders with code style 1`] = `
.emotion-1 {
  color: rgba(0, 0, 0, 0.64);
  background-color: #f3f5f7;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  cursor: pointer;
  display: inline-block;
  margin-left: 4px;
  text-align: center;
  color: #1f1f1f;
}

<div
  class="emotion-0"
  data-testid="test-paragraph"
>
  <span>
    <span
      class="emotion-1"
      style="position: relative;"
    >
      <iframe
        style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
      />
      A design is a plan or specification for the construction of an object or system or for the implementation of an activity or process, or the result of that plan or specification in the form of a prototype, product or process. The verb to design expresses the process of developing a design. In some cases, the direct construction of an object without an explicit prior plan (such as in craft work, some engineering, coding, and graphic design) may also be considered to be a design activity.
    </span>
  </span>
  <span
    class="emotion-2"
  >
    <span
      class="emotion-3"
    />
  </span>
</div>
`;

exports[`Paragraph renders with disabled style 1`] = `
.emotion-0 {
  color: rgba(0, 0, 0, 0.64);
  cursor: not-allowed;
  color: #c2c2c2;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<span
  class="emotion-0"
  style="position: relative;"
>
  <iframe
    style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
  />
  This is a paragraph
</span>
`;

exports[`Paragraph renders with styles 1`] = `
.emotion-1 {
  color: rgba(0, 0, 0, 0.64);
  font-weight: bold;
  background-color: #fff2a3;
  -webkit-text-decoration: underline line-through;
  text-decoration: underline line-through;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-3 {
  cursor: pointer;
  display: inline-block;
  margin-left: 4px;
  text-align: center;
  color: #1f1f1f;
}

<div
  class="emotion-0"
  data-testid="test-paragraph"
>
  <span>
    <span
      class="emotion-1"
      style="position: relative;"
    >
      <iframe
        style="background: transparent; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%; z-index: -1;"
      />
      A design is a plan or specification for the construction of an object or system or for the implementation of an activity or process, or the result of that plan or specification in the form of a prototype, product or process. The verb to design expresses the process of developing a design. In some cases, the direct construction of an object without an explicit prior plan (such as in craft work, some engineering, coding, and graphic design) may also be considered to be a design activity.
    </span>
  </span>
  <span
    class="emotion-2"
  >
    <span
      class="emotion-3"
    />
  </span>
</div>
`;
